# pretzelhammer_s_Rust_blog_Education

./: README.md
01_rust_blog_education/: README.md
01_rust_blog_education/01_trait_basics/: README.md
01_rust_blog_education/01_trait_basics/02_trait_T_refT_mutrefT/: README.md
01_rust_blog_education/02_Sizedness_in_Rust/: README.md
01_rust_blog_education/02_Sizedness_in_Rust/a01_sizedness/: Cargo.toml
01_rust_blog_education/02_Sizedness_in_Rust/a02_2width_pointer/: Cargo.toml
01_rust_blog_education/02_Sizedness_in_Rust/a03_trait_objects/: Cargo.toml
01_rust_blog_education/03_static_val/: README.md
01_rust_blog_education/03_static_val/a01_static_val/: Cargo.toml  README.md
01_rust_blog_education/03_static_val/a02_rand_static/: Cargo.toml  (+1 more)
01_rust_blog_education/04_lifetime_rust/: README.md
01_rust_blog_education/06_boxed_trait_objects_don_t_have_lifetimes/: README.md
01_rust_blog_education/07_compiler_error_messages_will_tell_me_how_to_fix_my_program/: README.md
01_rust_blog_education/09_downgrading_mut_refs_to_shared_refs_is_safe/: README.md
01_rust_blog_education/100_std_Traits/: README.md
02_design_patterns/: README.md
03_Assembly_x86_64_Arm/: README.md
04_async_asynchronous_Rust/: README.md
04_async_asynchronous_Rust/Asynchromous_async/: README.md
04_async_asynchronous_Rust/Asynchromous_async/Stream_Simple_Trace_Loggin/a04_adapting_a_stream_in_fight/: Cargo.toml  README.md
04_async_asynchronous_Rust/Asynchromous_async/Stream_Simple_Trace_Loggin/a04_adapting_a_stream_in_fight/src/: main.rs
05_backend_Rust_Tutorial/: README.md
(+220 files in other folders)
